<resources>
    <string name="app_name">UU漫画</string>

    <!--Launch-->
    <string name="alter_tip">本程序仅供学习参考使用，严禁任何商业用途</string>
    <string name="more">更多</string>
    <string name="recommend">推荐</string>
    <string name="search">请输入您的内容</string>
    <string name="newest">最新</string>
    <string name="rank">排行</string>
    <string name="hot">热门</string>
    <string name="refresh">刷新</string>
    <string name="tip_search">可按 漫画名 或 漫画家 搜索</string>
    <string name="hot_search">热门搜索</string>
    <string name="search_history">搜索历史</string>
    <string name="offline_cache">离线缓存</string>
    <string name="start_read">开始阅读</string>
    <string name="last_update">最后更新：</string>
    <string name="asc_order">升序</string>
    <string name="last_page">上一页</string>
    <string name="next_page">下一页</string>
    <string name="related_recommend">相关推荐</string>
    <string name="tip_synopsis">剧情简介</string>
    <string name="author_info">作者信息</string>
    <string name="author_notice">作者公告</string>
    <string name="fan_influence">粉丝影响力</string>
    <string name="des_order">降序</string>
    <string name="setting">设置</string>
    <string name="auto">自动</string>
    <string name="quality">画质</string>
    <string name="brightness">亮度</string>
    <string name="dir">目录</string>
    <string name="order">正序</string>
    <string name="edit">编辑</string>
    <string name="update">更新</string>
    <string name="select_all">全选</string>
    <string name="delete">删除</string>
    <string name="ranking">排行榜</string>
    <string name="new_ranking">新番榜</string>
    <string name="hot_ranking">人气榜</string>
    <string name="full_ranking">完结榜</string>
    <string name="topup_ranking">充值榜</string>
    <string name="share_title">推广奖励</string>
    <string name="share_info1">-通过您的推广链接注册的会员自动成为您的下线, 同时您会获得1元的奖励</string>
    <string name="share_info2">-下线会员任何一笔充值，您都有10%的奖励</string>
    <string name="share_get">复制推广链接</string>
    <string name="share_rewards">推广奖励</string>
    <string name="my_wallet">我的钱包</string>
    <string name="bind_phone">绑定手机</string>
    <string name="exchange_vip">兑换VIP</string>

    <string name="cancel">取消</string>
    <string name="confirm">确定</string>

    <string name="please_input_username">请输入用户名！</string>
    <string name="please_input_nickname">请输入昵称！</string>
    <string name="please_input_password">请输入密码！</string>
    <string name="please_password_again">请输入确认密码！</string>
    <string name="password_not_match">两次密码输入不同,请重新输入！</string>

    <string name="username_default">这是八个字的名字</string>

    <string name="no_browser_tips">找不到网页浏览器，请安装浏览器后再试</string>


</resources>
