<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <include layout="@layout/layout_top" />

    <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="48dp">

        <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/colorBlack"
                android:text="@string/share_rewards" />

        <LinearLayout
                android:layout_width="0dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/text_amount"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/colorRed"
                    android:text="0" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_normal"
                    android:textColor="@color/colorBlack"
                    android:text="元" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/tv_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/colorBlack"
                android:text="@string/share_get" />

        <TextView
                android:layout_below="@+id/tv_url"
                android:id="@+id/tv_submit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:textSize="16dp"
                android:textColor="#fff"
                android:background="@drawable/shape_red"
                android:text="@string/share_get" />
    </RelativeLayout>

    <android.support.v7.widget.AppCompatTextView
            android:padding="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:text="@string/share_info1"
            android:textSize="@dimen/text_size_normal"
            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:textSize="@dimen/text_size_normal"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorBlack"
            android:text="@string/share_info2"
            android:layout_height="wrap_content" />

    <View
            android:layout_marginTop="10dp"
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:background="@color/colorGray_9"
            android:layout_height="0.1dp" />

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never" />

</LinearLayout>